syntax = "proto3";

package logsdb.protos;

service Pusher {
  rpc Push(stream PushRequest) returns (stream PushResponse) {}
}

service Query {
  rpc Query(QueryParams) returns (stream LogRecord) {}
  rpc Tail(QueryParams) returns (stream LogRecord) {}
}

message PushRequest {
  string collection = 1;
  LogRecord record = 2;
}

message LogRecord {
  uint64 time = 1;
  string message = 2;
  RecordId id = 3;
}

message RecordId {
  uint64 time = 1;
  uint64 nuance = 2;
}

message PushResponse {
  string id = 1;
}

message QueryParams {
  string collection = 1;
  uint64 from = 2;
  uint64 to = 3;
  int32 limit = 4;
  string after = 5;
}

